@@ -4,6 +4,7 @@ bad_md5 = [
 ]
 
 good_md5 = [
+        '92e29501bb921415a9427c784048c4ed',
         'sentinel'
 ]
 
